# redditgtk

./: README.md  meson.build
data/: org.gabmus.redditgtk.appdata.xml.in  org.gabmus.redditgtk.desktop.in  org.gabmus.redditgtk.gresource.xml  org.gabmus.redditgtk.service.desktop
data/ui/: aboutdialog.glade.in  comment_box.glade  gtk_style.css  headerbar.glade  login_view.glade  main_ui.glade  menu.xml  new_post_window.glade  post_body.glade  post_details_headerbar.glade  post_preview.glade  shortcutsWindow.xml
po/: POTFILES.in  it.po  update_potfiles.sh
redditgtk/: __main__.py  accel_manager.py  app_window.py  common_post_box.py  confManager.py  download_manager.py  front_page_headerbar.py  headerbar.py  left_stack.py  main_deck.py  main_leaflet.py  main_ui.py  new_post_window.py  path_utils.py  post_details_view.py  post_preview.py  saved_view.py  sections_stack.py  settings_window.py  single_post_stream_view.py  webview.py
redditgtk/api/: auth.py
src/api/: auth.py
